@@ -46,7 +46,7 @@ is ((exec_as $testuser, "pg_dropcluster $ownver own --stop"), 0,
 # pg_upgradecluster
 if ($grpver ne $ownver) {
     my $outref;
-    is ((exec_as $testuser, "pg_upgradecluster $grpver grp", $outref, 0), 0, 
+    is ((exec_as $testuser, "pg_upgradecluster -v $ownver $grpver grp", $outref, 0), 0, 
         "pg_upgradecluster succeeds as user $testuser");
     like $$outref, qr/Starting target cluster/, 'pg_upgradecluster reported cluster startup';
     like $$outref, qr/Success. Please check/, 'pg_upgradecluster reported successful operation';
